fix: Mobile version: Icons are overlapping.

--- a/src/components/header/HeaderMobile.scss
+++ b/src/components/header/HeaderMobile.scss
@@ -17,10 +17,4 @@
     width: 27px;
     height: 27px;
   }
-
-  .header__sidebar-toggle {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-  }
 }
